--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Clcik to View Content</h1>
+<h1>Click to View Sub: "<%= @sub.name %>" Topics</h1>
 <%= link_to 'Create a new topic', new_sub_topic_path(@sub) %>
 <ul>
   <% @topics.each do |topic| %>
@@ -7,3 +7,4 @@
     </li>
   <% end %>
 </ul>
+<%= link_to 'Back to Sub', sub_path(@sub) %>
