--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @sub.name %> - <%= @topic.name %></h1>
+<h1>Sub: "<%= @sub.name %>" Topic: "<%= @topic.name %>"</h1>
 <p><%= @topic.body %></p>
 <%= link_to 'Add Commment', new_topic_comment_path(@topic) %>
 
